2005-04-24 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpstrip] Added new utility.

2005-04-15 Craig Franklin <craigfranklin@users.sourceforge.net>
  * gputils 0.13.1 Released.
  * [gpasm] Generate an error if config is placed in the middle of section.
  * [gplink] Generate an error if a relocation address is outside a section.

2005-04-13 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gplink] Fixed a bug in section merging.
  * [gpvo] Fixed a bug when disassembling multiword instructions.

2005-03-23 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gputils] Updated header files and linker scripts.

2005-03-11 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gplink] Fixed RELOCT_ALL relocation.

2005-01-27 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpal] Updated pub files.

2005-01-22 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gplink] Remove weak symbols from input object files.

2005-01-17 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gplink] Scan archives for missing symbols multiple times if necessary.

2005-01-17 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpasm] Fix relocation error with LCALL and LGOTO directives.

2005-01-14 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpasm] Allow concatenation operators in extern and global directives.

2005-01-12 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Updated config scripts.

2005-01-06 Alain Portal <aportal AT univ-montp2 DOT fr>
  * Updated French man pages.

2005-01-03 Craig Franklin <craigfranklin@users.sourceforge.net>
  * gputils 0.13.0 Released.
  * [gpdasm] Fixed error in decoding two word instructions.

2004-12-31 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gputils] Added support for 18xx extended instruction set.
  * [gplink] Generate a warning if object processor names don't match.
  * [gpdasm] Decode 18xx instruction mnemonics.
